test/zinc_source/compile_errors/modules/01_private_import.zn
// expected-error: module 'modules/_lib/math' does not export '_SECRET'
import modules/_lib/math [_SECRET]

fn main() {
    print(_SECRET)
}
